<resources>
    <string name="app_name">calculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">x</string>
    <string name="dive">/</string>
    <string name="del">AC</string>
    <string name="equals">=</string>
    <string name="btn_percent">%</string>
    <string name="btn_plus_minus">+/-</string>
    <string name="material_dark">Темная тема</string>
    <string name="material_light">Светлая тема</string>
</resources>