<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/background_colorDark">

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:srcCompat="@drawable/background_2025316" />-->


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:minHeight="60dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_del"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/dop_btn"
                android:text="@string/del"/>


            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_plus_minus"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/dop_btn"
                android:text="@string/btn_plus_minus" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_percent"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/dop_btn"
                android:text="@string/btn_percent" />

            <com.google.android.material.button.MaterialButton style="@style/main_button"
                android:id="@+id/button_dive"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/dive"/>

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_7"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/btn_7" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_8"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_8"/>

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_9"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/btn_9" />

            <com.google.android.material.button.MaterialButton style="@style/main_button"
                android:id="@+id/button_mult"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/mult" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_4"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/btn_4"/>

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_5"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_5" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_6"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/btn_6" />

            <com.google.android.material.button.MaterialButton style="@style/main_button"
                android:id="@+id/button_minus"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/minus" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_1"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/btn_1" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_2"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/btn_2" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_3"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/btn_3"/>

            <com.google.android.material.button.MaterialButton style="@style/main_button"
                android:id="@+id/button_plus"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/plus"/>




            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_0"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:text="@string/btn_0" />

            <com.google.android.material.button.MaterialButton style="@style/usual_button"
                android:id="@+id/button_dot"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/btn_dot" />

            <com.google.android.material.button.MaterialButton style="@style/main_button"
                android:id="@+id/button_equals"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/equals" />

        </GridLayout>

    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/history"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:gravity="bottom|end"-->
<!--        android:hint="@string/app_name"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="@color/white"-->
<!--        android:textSize="50sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    <RadioGroup
        android:id="@+id/radioThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_dark"
            android:checked="true"
            android:textColor="@color/white" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light"
            android:textColor="@color/white" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>